--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="#education">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Skills</a>
+                        <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Portfolio</a>
@@ -275,33 +275,121 @@
                     <h1 class="modal-title fs-6 text" id="CertificatesLabel">My certificates</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body cert_container">
+                <div class="modal-body">
                     <div id="carouselExampleFade" class="carousel slide carousel-fade">
                         <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Excellence in Web and Mobile System"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="1" aria-label="486-hour Internship Program Certificate of Completion"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="2" aria-label="National Certificate II in Computer Systems Servicing"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="3" aria-label="Git for Beginners course on Udemy"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="4" aria-label="Introduction to AngularJS"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="5" aria-label="Angular 7 for Beginners - Intermediate - Advanced Level"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="6" aria-label="JQuery Tutorial"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="7" aria-label="Frontend Fundamentals"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="8" aria-label="Data Pivacy Act Awareness webinar"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="9" aria-label="Web Development using WordPress webinar"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="10" aria-label="Introduction to UI/UX Design webinar"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="11" aria-label="Introduction to Tensor Flow webinar"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="12" aria-label="JPCS Tech Talks 2022: Let's Get Cloud"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="13" aria-label="JPCS Tech Talks 2022: Into the Cyber World"></button>
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="images/jordan-harrison-40XgDxBfYXM-unsplash.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>First slide label</h5>
-                                    <p>Some representative placeholder content for the first slide.</p>
+                                <img src="images/cetificates/excellence-in-web-and-mobile-systems.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Excellence in Web and Mobile System</h5>
+                                    <p>Awarded by DWCC-School of Information and Technology on May 18, 2023.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="images/bram-naus-n8Qb1ZAkK88-unsplash.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Second slide label</h5>
-                                    <p>Some representative placeholder content for the second slide.</p>
+                                <img src="images/cetificates/INTERNSHIP.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Completion</h5>
+                                    <p>486-hour Internship Program at MVSoftech, Inc.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="images/denny-muller-HfWA-Axq6Ek-unsplash.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Third slide label</h5>
-                                    <p>Some representative placeholder content for the third slide.</p>
+                                <img src="images/cetificates/nc2-css.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>National Certificate II in Computer Systems Servicing</h5>
+                                    <p>Issued on December 01, 2022. Valid until November 30, 2027</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/git-for-beginners.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Completion</h5>
+                                    <p>Git for Beginners course on Udemy</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/introduction-to-angularjs.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Completion</h5>
+                                    <p>Introduction to AngularJS free online course on Great Learning</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/angular-for-advanced-level.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Completion</h5>
+                                    <p>Angular 7 for Beginners - Intermediate - Advanced Level free course on Great Learning</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/jquery-tutorial.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Completion</h5>
+                                    <p>JQuery Tutorial free course on Great Learning</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/frontend-fundamentals.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Completion</h5>
+                                    <p>Frontend Fundamentals course on Pirple</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/data-pivacy-act-awareness.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Participation</h5>
+                                    <p>Data Pivacy Act Awareness webinar of DICT Region 9 - BASULTA</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/web-development-using-wordpress.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Participation</h5>
+                                    <p>Web Development using WordPress webinar of DICT Region 4B - Oriental Mindoro</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/introduction-to-ui-ux-design.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Participation</h5>
+                                    <p>Introduction to UI/UX Design webinar of DICT Region 9 - BASULTA</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/introduction-to-tensor-flow.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Participation</h5>
+                                    <p>Introduction to Tensor Flow webinar of DICT Luzon Cluster 3 Oriental Mindoro</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/lets-get-cloud.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Participation</h5>
+                                    <p>JPCS Tech Talks 2022: Let's Get Cloud organized by JPCS National</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cetificates/into-the-cyber-world.png" class="d-block w-100 certificate_img" alt="...">
+                                <div class="carousel-caption d-none d-md-block certificate_label">
+                                    <h5>Certificate of Participation</h5>
+                                    <p>JPCS Tech Talks 2022: Into the Cyber World organized by JPCS National</p>
                                 </div>
                             </div>
                         </div>
@@ -315,10 +403,6 @@
                         </button>
                     </div>
                 </div>
-                <!-- <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Understood</button>
-                </div> -->
             </div>
         </div>
     </div>
