Update index file, add contact section

--- a/index.html
+++ b/index.html
@@ -407,6 +407,59 @@
         </div>
     </div>
     <!-- End of Skills -->
+
+    <!-- Portfolio -->
+    <div id="portfolio">
+        <h1>Portfolio</h1>
+    </div>
+    <!-- End of Portfolio -->
+
+    <!-- Contact -->
+    <div id="contact" class="text d-flex flex-column flex-sm-column flex-md-column flex-lg-row flex-xl-row flex-xxl-row justify-content-around p-5">
+        <div class="my-3">
+            <h1 class="text">Contact</h1>
+            <div class="row">
+                <div class="col col-12 col-sm-5 col-md-5 col-lg-4 col-xl-4 col-xxl-4">
+                    <p><i class="fa-solid fa-envelope"></i>&nbsp Email</p>
+                </div>
+                <div class="col col-12 col-sm-7 col-md-7 col-lg-8 col-xl-8 col-xxl-8">
+                    <p>nicamaezurbano59@gmail.com</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-12 col-sm-5 col-md-5 col-lg-4 col-xl-4 col-xxl-4">
+                    <p><i class="fa-solid fa-mobile"></i>&nbsp Mobile no.</p>
+                </div>
+                <div class="col col-12 col-sm-7 col-md-7 col-lg-8 col-xl-8 col-xxl-8">
+                    <p>+63 961 428 5109</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-5 col-sm-5 col-md-5 col-lg-4 col-xl-4 col-xxl-4">
+                    <p><i class="fa-solid fa-location-dot"></i>&nbsp Location</p>
+                </div>
+                <div class="col col-12 col-sm-7 col-md-7 col-lg-8 col-xl-8 col-xxl-8">
+                    <p>Estrella, Naujan, Oriental Mindoro, Philippines</p>
+                </div>
+            </div>
+        </div>
+        <div class="my-3">
+            <h4>Connect with me</h4>
+            <ul class="links">
+                <li><i class="fa-brands fa-facebook"></i>&nbsp<a class="link-offset-2 link-dark link-underline-opacity-25 link-underline-opacity-75-hover link-underline-dark" href="https://www.facebook.com/nicamae.zurbano">Facebook</a></li>
+                <li><i class="fa-brands fa-instagram"></i>&nbsp<a class="link-offset-2 link-dark link-underline-opacity-25 link-underline-opacity-75-hover link-underline-dark" href="https://www.instagram.com/nicazurbano/">Instagram</a></li>
+                <li><i class="fa-brands fa-linkedin"></i>&nbsp<a class="link-offset-2 link-dark link-underline-opacity-25 link-underline-opacity-75-hover link-underline-dark" href="www.linkedin.com/in/nica-mae-zurbano-93ab16279">LinkedIn</a></li>
+                <li><i class="fa-brands fa-github"></i>&nbsp<a class="link-offset-2 link-dark link-underline-opacity-25 link-underline-opacity-75-hover link-underline-dark" href="https://github.com/nicamaezurbano">GitHub</a></li>
+            </ul>  
+        </div>
+    </div>
+    <!-- End of Contact -->
+
+    <!-- Footer -->
+    <div id="footer" class="d-flex align-items-center justify-content-center">
+        <p class="text-light text m-0">Copyright (c) 2023 Nica Mae Zurbano</p>
+    </div>
+    <!-- End of Footer -->
     
     <!-- Link to external JavaScript file -->
     <script src="js/externalJS.js"></script>
