--- a/contact.html
+++ b/contact.html
@@ -30,21 +30,26 @@
     <div id="main_container" class="container-fluid row py-5">
         <div class="col col-1 col-sm-1 col-md-1 col-lg-2 col-xl-2"></div>
 
-        <div id="profile_text" class="col col-10 col-sm-10 col-md-6 col-lg-5 col-xl-5 d-flex flex-column justify-content-center" data-aos="zoom-in">
+        <div id="profile_text" class="col col-10 col-sm-10 col-md-6 col-lg-5 col-xl-5 d-flex flex-column justify-content-center">
             <div>
-                <strong><p class="heading">Hello, I'm</p></strong>
-                <h1 class="title pb-3">Nica Mae Zurbano</h1>
-                <p class="subheading">BSIT Graduate</p>
-                <p class="text py-4">I am a passionate programmer with profound interest in software and web development.</p>
-                
                 <div class="button_group d-flex flex-row justify-content-start">
-                    <a href="education.html"><div class="button text_small text-light links">Education</div></a>
+                    <a href="index.html"><div class="button text_small text-light links"><i class="fa-solid fa-angle-left"></i> &nbsp Home</div></a>
                     <a href="skills.html"><div class="button mx-2 text_small text-light links">Skills</div></a>
                     <a href="portfolio.html"><div class="button text_small text-light links">Portfolio</div></a>
                 </div>
-                <div class="button_group d-flex flex-row justify-content-start">
-                    <a href="contact.html"><div class="button2 text_small text-light links">Contact</div></a>
-                    <a href="resume/Resume.pdf" download="Nica Mae Zurbano - Resume"><div class="button2  mx-2 text_small text-light links">Resume</div></a>
+            </div>
+
+            <div  data-aos="fade-left">
+                <strong><p class="heading py-4">Contact me</p></strong>
+
+                <p><i class="fa-solid fa-location-dot icon_1"></i> &nbsp &nbsp Estrella, Naujan, Oriental Mindoro</p>
+                <p><i class="fa-solid fa-phone icon_1"></i> &nbsp &nbsp +63 961 428 5109</p>
+                <p><i class="fa-solid fa-envelope icon_1"></i> &nbsp &nbsp nicamaezurbano59@gmail.com</p>
+                <div class="my-3">
+                    <a href="https://www.facebook.com/nicamae.zurbano"><i class="fa-brands fa-facebook icon_2 icons"></i></a> &nbsp 
+                    <a href="https://www.instagram.com/nicazurbano/"><i class="fa-brands fa-instagram icon_2 icons"></i></a> &nbsp 
+                    <a href="https://www.linkedin.com/in/nica-mae-zurbano/"><i class="fa-brands fa-linkedin icon_2 icons"></i></a> &nbsp 
+                    <a href="https://github.com/nicamaezurbano"><i class="fa-brands fa-github icon_2 icons"></i></a>
                 </div>
             </div>
         </div>
