--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,9 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Favicon -->
+    <link rel="icon" href="images/tab-icon.png">
+
     <title>Personal Site</title>
 </head>
 <body class="bg-secondary-color">
