Update Education and Portfolio

--- a/education.html
+++ b/education.html
@@ -104,98 +104,98 @@
                             <img src="images/cetificates/excellence-in-web-and-mobile-systems.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Excellence in Web and Mobile System</h5>
-                                <p>Awarded by DWCC-School of Information and Technology on May 18, 2023.</p>
+                                <p class="text-light">Awarded by DWCC-School of Information and Technology on May 18, 2023.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/INTERNSHIP.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Completion</h5>
-                                <p>486-hour Internship Program at MVSoftech, Inc.</p>
+                                <p class="text-light">486-hour Internship Program at MVSoftech, Inc.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/nc2-css.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>National Certificate II in Computer Systems Servicing</h5>
-                                <p>Issued on December 01, 2022. Valid until November 30, 2027</p>
+                                <p class="text-light">Issued on December 01, 2022. Valid until November 30, 2027</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/git-for-beginners.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Completion</h5>
-                                <p>Git for Beginners course on Udemy</p>
+                                <p class="text-light">Git for Beginners course on Udemy</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/introduction-to-angularjs.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Completion</h5>
-                                <p>Introduction to AngularJS free online course on Great Learning</p>
+                                <p class="text-light">Introduction to AngularJS free online course on Great Learning</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/angular-for-advanced-level.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Completion</h5>
-                                <p>Angular 7 for Beginners - Intermediate - Advanced Level free course on Great Learning</p>
+                                <p class="text-light">Angular 7 for Beginners - Intermediate - Advanced Level free course on Great Learning</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/jquery-tutorial.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Completion</h5>
-                                <p>JQuery Tutorial free course on Great Learning</p>
+                                <p class="text-light">JQuery Tutorial free course on Great Learning</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/frontend-fundamentals.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Completion</h5>
-                                <p>Frontend Fundamentals course on Pirple</p>
+                                <p class="text-light">Frontend Fundamentals course on Pirple</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/data-pivacy-act-awareness.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Participation</h5>
-                                <p>Data Pivacy Act Awareness webinar of DICT Region 9 - BASULTA</p>
+                                <p class="text-light">Data Pivacy Act Awareness webinar of DICT Region 9 - BASULTA</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/web-development-using-wordpress.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Participation</h5>
-                                <p>Web Development using WordPress webinar of DICT Region 4B - Oriental Mindoro</p>
+                                <p class="text-light">Web Development using WordPress webinar of DICT Region 4B - Oriental Mindoro</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/introduction-to-ui-ux-design.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Participation</h5>
-                                <p>Introduction to UI/UX Design webinar of DICT Region 9 - BASULTA</p>
+                                <p class="text-light">Introduction to UI/UX Design webinar of DICT Region 9 - BASULTA</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/introduction-to-tensor-flow.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Participation</h5>
-                                <p>Introduction to Tensor Flow webinar of DICT Luzon Cluster 3 Oriental Mindoro</p>
+                                <p class="text-light">Introduction to Tensor Flow webinar of DICT Luzon Cluster 3 Oriental Mindoro</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/lets-get-cloud.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Participation</h5>
-                                <p>JPCS Tech Talks 2022: Let's Get Cloud organized by JPCS National</p>
+                                <p class="text-light">JPCS Tech Talks 2022: Let's Get Cloud organized by JPCS National</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cetificates/into-the-cyber-world.png" class="d-block w-100 certificate_img" alt="...">
                             <div class="carousel-caption d-none d-md-block certificate_label">
                                 <h5>Certificate of Participation</h5>
-                                <p>JPCS Tech Talks 2022: Into the Cyber World organized by JPCS National</p>
+                                <p class="text-light">JPCS Tech Talks 2022: Into the Cyber World organized by JPCS National</p>
                             </div>
                         </div>
                     </div>
