--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,15 @@
                                 <i class="fa-brands fa-css3-alt fa-2x"></i>&nbsp 
                                 <i class="fa-brands fa-bootstrap fa-2x"></i>
                             </p>
-                            <a href="https://github.com/nicamaezurbano/school-of-IT-website" class="btn button card_btn text-light">
-                                <i class="fa-solid fa-up-right-from-square"></i>&nbsp GitHub</a>
+
+                            <div class="d-flex flex-row justify-content-center card_btn">
+                                <a href="https://github.com/nicamaezurbano/school-of-IT-website" class="btn button text-light">
+                                    <i class="fa-solid fa-up-right-from-square"></i>&nbsp GitHub</a>
+                                &nbsp &nbsp
+                                <a href="school-of-IT/index.html" class="btn button3 text_small subheading align-self-center" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-solid fa-magnifying-glass"></i>&nbsp View</a>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -82,7 +89,7 @@
                             <p class="icon_1">
                                 <i class="fa-brands fa-wordpress fa-2x"></i>
                             </p>
-                            <a href="https://dev-crochet-and-knitted.pantheonsite.io/" class="btn button card_btn text-light">
+                            <a href="https://dev-crochet-and-knitted.pantheonsite.io/" class="btn button card_btn text-light" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-solid fa-up-right-from-square"></i>&nbsp Pantheon</a>
                         </div>
                     </div>
@@ -114,7 +121,7 @@
                         <img src="images/portfolio/1.png" class="card-img-top" alt="Mobile App design">
                         <div class="card-body d-flex flex-column justify-content-evenly portfolio_item_body">
                             <h5 class="card-title">A mobile application design using Balsamiq Wireframes</h5>
-                            <a href="https://www.canva.com/design/DAF2BlNujZk/odDmI1PHAuxV3Uxdr_BUeQ/view?utm_content=DAF2BlNujZk&utm_campaign=designshare&utm_medium=link&utm_source=editor" class="btn button card_btn text-light">
+                            <a href="https://www.canva.com/design/DAF2BlNujZk/odDmI1PHAuxV3Uxdr_BUeQ/view?utm_content=DAF2BlNujZk&utm_campaign=designshare&utm_medium=link&utm_source=editor" class="btn button card_btn text-light" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-solid fa-up-right-from-square"></i>&nbsp Canva</a>
                         </div>
                     </div>
@@ -124,7 +131,7 @@
                         <img src="images/portfolio/3.png" class="card-img-top" alt="Mobile App design">
                         <div class="card-body d-flex flex-column justify-content-evenly portfolio_item_body">
                             <h5 class="card-title">A mobile application design using Balsamiq Wireframes that allows student to create and manage their schedules and tasks.</h5>
-                            <a href="https://www.canva.com/design/DAF2BnMBNrI/r9kQRtarolIKklFQ5XKVIA/view?utm_content=DAF2BnMBNrI&utm_campaign=designshare&utm_medium=link&utm_source=editor" class="btn button card_btn text-light">
+                            <a href="https://www.canva.com/design/DAF2BnMBNrI/r9kQRtarolIKklFQ5XKVIA/view?utm_content=DAF2BnMBNrI&utm_campaign=designshare&utm_medium=link&utm_source=editor" class="btn button card_btn text-light" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-solid fa-up-right-from-square"></i>&nbsp Canva</a>
                         </div>
                     </div>
@@ -135,7 +142,7 @@
                         <img src="images/portfolio/2.png" class="card-img-top" alt="Low Fidelity design">
                         <div class="card-body d-flex flex-column justify-content-evenly portfolio_item_body">
                             <h5 class="card-title">Low Fidelity Design of an Airline Ticketing Website using Balsamiq Wireframes</h5>
-                            <a href="https://drive.google.com/file/d/1-rLB4IaStTbUqEE09J99pZ_ogKy_2fYY/view?usp=sharing" class="btn button card_btn text-light">
+                            <a href="https://drive.google.com/file/d/1-rLB4IaStTbUqEE09J99pZ_ogKy_2fYY/view?usp=sharing" class="btn button card_btn text-light" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-solid fa-up-right-from-square"></i>&nbsp Google Drive</a>
                         </div>
                     </div>
@@ -145,7 +152,7 @@
                         <img src="images/portfolio/8.png" class="card-img-top" alt="Low Fidelity design">
                         <div class="card-body d-flex flex-column justify-content-evenly portfolio_item_body">
                             <h5 class="card-title">Sample artworks and booklet created using Photoshop.</h5>
-                            <a href="https://drive.google.com/drive/folders/19rdYIJ5Ip524EvKWFGjCyI8W9zs4b23M?usp=sharing" class="btn button card_btn text-light">
+                            <a href="https://drive.google.com/drive/folders/19rdYIJ5Ip524EvKWFGjCyI8W9zs4b23M?usp=sharing" class="btn button card_btn text-light" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-solid fa-up-right-from-square"></i>&nbsp Google Drive</a>
                         </div>
                     </div>
