Update resume and index

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div>
                 <strong><p class="heading">Hello, I'm</p></strong>
                 <h1 class="title pb-3">Nica Mae Zurbano</h1>
-                <p class="subheading">BSIT Graduate</p>
+                <p class="subheading">BSIT Graduate | Web Developer</p>
                 <p class="text py-4">I am a passionate programmer with profound interest in software and web development.</p>
                 
                 <div class="button_group d-flex flex-row justify-content-start">
